@@ -3,6 +3,7 @@ mailboxes = /etc/postfix/fls/mailboxes
 aliases = /etc/postfix/fls/aliases
 domains = /etc/postfix/fls/domains
 senderaccess = /etc/postfix/fls/sender-access
+sendermaps = /etc/postfix/fls/smtpd_sender_login_maps
 postmap = /usr/sbin/postmap
 postfix	= /usr/sbin/postfix
 basemailpath = /home/mono/.tmp/mx/test/mails/
